--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.18.0",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
@@ -21,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.4",
     "multer": "^1.4.2",
     "sqlite3": "^4.1.1"
